[gd_scene load_steps=29 format=2]

[ext_resource path="res://Abdullah Folder/Player Things/Player.gd" type="Script" id=1]
[ext_resource path="res://Abdullah Folder/Player Things/Rod.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art Folder/Samurai_WalkStyle.png" type="Texture" id=3]
[ext_resource path="res://Abdullah Folder/Inventory Things/Inventory.tres" type="Resource" id=4]
[ext_resource path="res://Abdullah Folder/Inventory Things/InventoryContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Abdullah Folder/Inventory Things/Bait Prompt.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art Folder/Samurai_Sit.png" type="Texture" id=7]
[ext_resource path="res://Art Folder/Samurai_CastingOut.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.8616
height = 27.0598

[sub_resource type="Animation" id=2]
resource_name = "CastingBack"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 11, 9, 8, 7, 6, 5, 4, 3, 1, 2, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1.684 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "CastingOut"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1.684 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6.72 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.94646, 1.824 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="AnimationNodeBlendSpace1D" id=6]

[sub_resource type="AnimationNodeBlendSpace1D" id=7]

[sub_resource type="AnimationNodeBlendSpace1D" id=8]

[sub_resource type="AnimationNodeBlendSpace1D" id=9]

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Walking"

[sub_resource type="AnimationNodeBlendSpace1D" id=10]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=18]
"states/Cast In/node" = SubResource( 6 )
"states/Cast In/position" = Vector2( 742, 425 )
"states/Cast Out/node" = SubResource( 7 )
"states/Cast Out/position" = Vector2( 529, 415 )
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 649, 247 )
states/Sitting/node = SubResource( 9 )
states/Sitting/position = Vector2( 1044, 126 )
states/Walking/node = SubResource( 10 )
states/Walking/position = Vector2( 336, 126 )
transitions = [ "Idle", "Walking", SubResource( 11 ), "Walking", "Idle", SubResource( 12 ), "Idle", "Sitting", SubResource( 13 ), "Sitting", "Idle", SubResource( 14 ), "Idle", "Cast Out", SubResource( 15 ), "Cast Out", "Cast In", SubResource( 16 ), "Cast In", "Idle", SubResource( 17 ) ]
start_node = "Idle"
end_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
inventory = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.684 )
texture = ExtResource( 8 )
vframes = 3
hframes = 5
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CastingBack = SubResource( 2 )
anims/CastingOut = SubResource( 3 )
anims/Sitting = SubResource( 4 )
anims/Walking = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )
"parameters/Cast In/blend_position" = 0
"parameters/Cast Out/blend_position" = 0
parameters/Idle/blend_position = -0.00436682
parameters/Sitting/blend_position = 0
parameters/Walking/blend_position = 0

[node name="Rod" parent="." instance=ExtResource( 2 )]
visible = false

[node name="InventoryContainer" parent="." instance=ExtResource( 5 )]
visible = false

[node name="BaitPrompt" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 151.762
margin_top = 115.997
margin_right = 301.762
margin_bottom = 160.997
inventory = ExtResource( 4 )
[connection signal="harvest" from="Rod" to="." method="_on_Rod_harvest"]
